// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout header component should render with default props 1`] = `
<header
  className="govuk-header "
  data-module="header"
  role="banner"
>
  <div
    className="govuk-header__container govuk-width-container"
  >
    <div
      className="govuk-header__logo"
    >
      <span
        className="govuk-header__logotype"
      >
        <Link
          className="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
          to="/"
        >
          Correspondence Service
        </Link>
      </span>
    </div>
    <div
      className="govuk-header__content"
    >
      <nav>
        <ul
          aria-label="Top Level Navigation"
          className="govuk-header__navigation "
          id="navigation"
        >
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/action/create/workflow"
            >
              Create Single Case
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/action/bulk/workflow"
            >
              Create Bulk Cases
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/search"
            >
              Search
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <a
              className="govuk-header__link"
              href="/oauth/logout"
            >
              Logout
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;

exports[`Layout header component should render without crest when service is not GOV.UK 1`] = `
<header
  className="govuk-header "
  data-module="header"
  role="banner"
>
  <div
    className="govuk-header__container govuk-width-container"
  >
    <div
      className="govuk-header__logo"
    >
      <span
        className="govuk-header__logotype"
      >
        <Link
          className="govuk-header__link govuk-header__link--homepage govuk-header__logotype-text"
          to="/"
        >
          Test Service
        </Link>
      </span>
    </div>
    <div
      className="govuk-header__content"
    >
      <nav>
        <ul
          aria-label="Top Level Navigation"
          className="govuk-header__navigation "
          id="navigation"
        >
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/action/create/workflow"
            >
              Create Single Case
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/action/bulk/workflow"
            >
              Create Bulk Cases
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <Link
              className="govuk-header__link"
              to="/search"
            >
              Search
            </Link>
          </li>
          <li
            className="govuk-header__navigation-item"
          >
            <a
              className="govuk-header__link"
              href="/oauth/logout"
            >
              Logout
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>
</header>
`;
